--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,40 @@
   max-width: 500px;
 }
 
+.invoice-container{
+  background: #2d1f1f;
+  color:#e0e0e0;
+  font-family: 'Poppins',sans-serif;
+  border-radius: 12px;
+  padding: 30px;
+  width: 80%;
+  margin: 30px auto;
+  box-shadow: 0 8px 16px #141313;
+}
+
+.invoice-header{
+  justify-content: space-between;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #444;
+  gap:30px;
+}
+
+.invoice-info,.customer-details{
+  flex:1;
+}
+
+.company-name{
+  color:#b3c245;
+  font-size: 28px;
+}
+
+.invoice-info p{
+  margin: 5px 0;
+  text-align: right;
+}
+
+.invoice-table{
+  width:100%;
+  margin-top: 20px;
+  border-collapse:collapse;
+}
