--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .logo {
-  width: 60px;
-  height: 60px;
+  width: 90px;
+  height: 70px;
 }
 
 .Navbar {
@@ -46,4 +46,8 @@
 .icon-group{
   display: flex;
   gap: 10px;
+}
+
+.dropdown-menu {
+  z-index: 1050; /* higher than navbar */
 }
